--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo.png" alt="logo" class="logo-1"> </a>
@@ -30,6 +31,7 @@
   </div>
 </nav>
 <!-- End Navbar --> 
+
 <!-------Banner Start------->
 <section class="banner" data-scroll-index='0'>
   <div class="banner-overlay">
@@ -38,8 +40,8 @@
         <div class="col-md-8 col-sm-12">
           <div class="banner-text">
             <h2 class="white">App Olistron</h2>
-            <h6 class="white">Veja nosso projeto mais recente e outros apps em nossa <a href="https://play.google.com/store/apps/developer?id=Wistemax" target="_blank" rel="dofollow" class="weblink">página do desenvolvedor</a>.</h6>
-            <p class="banner-text white">Desenvolvemos apps para dispositivos android que são úteis ao nossos usuários e usamos das tecnologias mais recentes e eficientes, sempre priorizando o conforto e uma boa experiência, criando apps intuitivos e fáceis de utilizar.</p>
+            <h6 class="white">Veja nosso projeto mais recente e outros apps em nossa <a href="https://play.google.com/store/apps/developer?id=Wistemax" target="_blank" rel="dofollow" class="weblink">p&aacute;gina do desenvolvedor</a>.</h6>
+            <p class="banner-text white">Desenvolvemos apps para dispositivos android que s&atilde;o &uacute;teis ao nossos usu&aacute;rios e usamos das tecnologias mais recentes e eficientes, sempre priorizando o conforto e uma boa experi&ecirc;ncia, criando apps intuitivos e f&aacute;ceis de utilizar.</p>
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.wmxapps.olistron" target="_blank" rel="dofollow"><img src="images/playstore_badge.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
             </ul>
@@ -50,11 +52,9 @@
     </div>
   </div>
 </section>
-
 <!-------Banner End-------> 
 
 <!-------About End------->
-
 <section class="about section-padding prelative" data-scroll-index='1'>
   <div class="container">
     <div class="row">
@@ -62,26 +62,26 @@
         <div class="sectioner-header text-center">
           <h3>Sobre o Wistemax</h3>
           <span class="line"></span>
-          <p>Nossa principal direção ao desenvolver aplicativos é e sempre foi criar aplicativos úteis e com interfaces descomplicadas e agradáveis aos usuários.</p>
+          <p>Nossa principal dire&ccedil;&atilde;o ao desenvolver aplicativos &eacute; e sempre foi criar aplicativos &uacute;teis e com interfaces descomplicadas e agrad&aacute;veis aos usu&aacute;rios.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-life-ring" aria-hidden="true"></i>
                 <h5>UI/UX</h5>
-                <p>Interfaces de usuários que usam uma paleta de cores diversas, que ao mesmo tempo não sobrecarrega o uso do app.</p>
+                <p>Interfaces de usu&aacute;rios que usam uma paleta de cores diversas, que ao mesmo tempo n&atilde;o sobrecarrega o uso do app.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.4s"> <i class="fa fa-mobile" aria-hidden="true"></i>
                 <h5>Funcionalidades</h5>
-                <p>Nossos aplicativos contam com diferentes funcionalidades úteis aos usuários em muitas ocasiões.</p>
+                <p>Nossos aplicativos contam com diferentes funcionalidades &uacute;teis aos usu&aacute;rios em muitas ocasi&otilde;es.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="icon-box wow fadeInUp" data-wow-delay="0.6s"> <i class="fa fa-bolt" aria-hidden="true"></i>
                 <h5>Desempenho</h5>
-                <p>Mantemos o uso de bibliotecas e módulos no mínimo para tornar os aplicativos leves e rápidos.</p>
+                <p>Mantemos o uso de bibliotecas e m&oacute;dulos no m&iacute;nimo para tornar os aplicativos leves e r&aacute;pidos.</p>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
         <div class="sectioner-header text-center">
           <h3>Olistron</h3>
           <span class="line"></span>
-          <p>Conheça o nosso mais novo projeto, criado para aqueles que desejam uma vida organizada e tenha tudo o que precisa em um único app.</p>
+          <p>Conhe&ccedil;a o nosso mais novo projeto, criado para aqueles que desejam uma vida organizada e tenha tudo o que precisa em um &uacute;nico app.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
@@ -126,21 +126,21 @@
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Agenda</h5>
-                  <p>Você também pode agendar seus compromissos em datas específicas em qualquer ano que desejar!</p>
+                  <p>Voc&ecirc; tamb&eacute;m pode agendar seus compromissos em datas espec&iacute;ficas em qualquer ano que desejar!</p>
                 </div>
                 <div class="media-right icon-border"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">event_note</span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Tarefas</h5>
-                  <p>Com pouquíssimos toques você cria e organiza suas listas de tarefas. Marque também as que já completou!</p>
+                  <p>Com pouqu&iacute;ssimos toques voc&ecirc; cria e organiza suas listas de tarefas. Marque tamb&eacute;m as que j&aacute; completou!</p>
                 </div>
                 <div class="media-right icon-border"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">fact_check</span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Compras</h5>
-                  <p>Controle seus gastos durantes as suas compras com um app intuitivo, agradável e mantenha os gastos dentro do limite com nossa configuração de orçamento limite.</p>
+                  <p>Controle seus gastos durantes as suas compras com um app intuitivo, agrad&aacute;vel e mantenha os gastos dentro do limite com nossa configura&ccedil;&atilde;o de or&ccedil;amento limite.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">shopping_basket</span> </div>
               </div>
@@ -153,21 +153,21 @@
                 <div class="media-left icon-border media-right-margin"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">person</span> </div>
                 <div class="media-body text-left">
                   <h5>Contatos</h5>
-                  <p>O app também lhe proporciona uma seção onde você pode guardar sua lista de contatos pessoais.</p>
+                  <p>O app tamb&eacute;m lhe proporciona uma se&ccedil;&atilde;o onde voc&ecirc; pode guardar sua lista de contatos pessoais.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-left icon-border media-right-margin"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">description</span> </div>
                 <div class="media-body text-left">
                   <h5>Notas</h5>
-                  <p>Organize e proteja suas notas senhas numéricas, mantendo-as fora do alcance de outros.</p>
+                  <p>Organize e proteja suas notas senhas num&eacute;ricas, mantendo-as fora do alcance de outros.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-left icon-border media-right-margin"> <span class="material-symbols-outlined" style="font-size:28px;" aria-hidden="true">request_quote</span> </div>
                 <div class="media-body text-left">
                   <h5>Despesas</h5>
-                  <p>Nunca mais deixe que suas despesas e demais gastos de cartão de credito fuja de seu controle. Também mantenha um orçamento limite para suas despesas.</p>
+                  <p>Nunca mais deixe que suas despesas e demais gastos de cart&atilde;o de credito fuja de seu controle. Tamb&eacute;m mantenha um or&ccedil;amento limite para suas despesas.</p>
                 </div>
               </div>
             </div>
@@ -187,13 +187,12 @@
         <div class="sectioner-header text-center">
           <h3>Contato</h3>
           <span class="line"></span>
-          <p>Caso tenha dúvidas ou sugestões que queira compartilhar entre em contato conosco pelo email: <b>wistemaxcontato@gmail.com</b></p>
+          <p>Caso tenha d&uacute;vidas ou sugest&otilde;es que queira compartilhar entre em contato conosco pelo email: <b>wistemaxcontato@gmail.com</b></p>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 <!-------Contact End-------> 
 
 <!-------Download End------->
@@ -205,7 +204,7 @@
         <div class="sectioner-header text-center white">
           <h3>Baixe o App</h3>
           <span class="line"></span>
-          <p class="white">Para baixar o aplicativo Olistron basta buscá-lo na Play Store e começar agora a organizar sua vida de uma forma simples e descomplicada. Não se esqueça de compartilhá-lo com seus amigos!</p>
+          <p class="white">Para baixar o aplicativo Olistron basta busc&aacute;-lo na Play Store e come&ccedil;ar agora a organizar sua vida de uma forma simples e descomplicada. N&atilde;o se esque&ccedil;a de compartilh&aacute;-lo com seus amigos!</p>
         </div>
       </div>
       <div class="col-md-12">
@@ -219,7 +218,6 @@
     <div class="row">&nbsp;</div>
   </div>
 </section>
-
 <!-------Download End------->
 
 <footer class="footer-copy">
